required changes for users to migrate from one version of MITAB to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the CVS log comments.


CHANGES - Current Version:
--------------------------

- tab2tab: Set dataset bounds only after setting spatialref to prevent
  default coordsys bounds from taking precedence when bounds are 
  available in source dataset (bug 1511)

- Coordsys false easting and northing are in the units of the coordsys, not
  necessarily meters.  Adjusted mitab_coordsys.cpp to reflect this. 
  http://bugzilla.remotesensing.org/show_bug.cgi?id=1113

- Similar problem in mitab_spatialref.cpp for TAB files also fixed. 
  http://bugzilla.remotesensing.org/show_bug.cgi?id=1113



Version 1.5.0 (2006-02-16)
--------------------------

- Updated contrib/mitab_dyn.pas with new C API functions. Note that other
  definition files for VB and .NET have *not* been updated for this release.

- Fixed crash when attempting to write TABPolyline object with an invalid
  geometry (GDAL bug 1059)

- cast strstr() results as per email from Charles Savage for VC8.

- Fixed build problem (link with -ldl not available) on MacOSX (bug 1167)

- Fixed problem with white space parsing in mitab_miffile.cpp (bug GDAL:954)

- layers with just regions can't be set as type wkbPolygon because they may
  have multipolygons (bug GDAL:958)
    http://bugzilla.remotesensing.org/show_bug.cgi?id=958

- Fixed support for multi character delimiters in .mid file (bug 1266)

- Fixed reading Mills.mif (TABPoint::ReadGeometryFromMIFFFile()), the check
  for SYMBOL didn't check if pszLine was non-NULL.

- Fixed memory leak of m_pszDelimiter in mitab_middatafile.cpp.

- Fixed OGR problems with setting bounds on MIF files, and wrong bounds
  on tab files (bug 1198)


Version 1.5.0-beta1 (2005-10-07)